# moos-ivp-mr

./: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake
.svn/: wc.db
data/: lake-needwood-nogrid.tif
missions/: .gitignore
missions/abc_frontseat_test/: abc_frontseat_test.bhv  abc_frontseat_test.moos  iFrontSeat__20181017T152812.txt  iFrontSeat__20181017T152827.txt  iFrontSeat__latest.txt
missions/alder/: alder.bhv  alder.moos
missions/alpha_sailmax_MOOSDAWG2024/: build.sh  clean.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.bhv.bak  meta_vehicle.moos  plug_iSailBoat.moos  plug_origin_warp.moos  plug_pHostInfo.moos  plug_polar.moos  plug_polar_historic.moos  plug_uFldAnemo.moos
missions/lab08/alpha_pshare/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha_local.moos  alpha_pi.moos  alpha_pi_local.moos
missions/lab08/better_alpha/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha_local.moos  alpha_pi.moos  alpha_pi_local.moos  alpha_shore.moos  (+1 more)
missions/lake_needwood/: .LastOpenedMOOSLogDirectory  .gitignore  lake-needwood-nogrid.info  lake-needwood-nogrid.tif  needwood.bhv  needwood.moos++  needwood_laptop.moos  needwood_robocat.moos  needwood_shore.moos
missions/lake_needwood_noscripts/: needwood.bhv  needwood_iM300_test.moos  needwood_laptop.moos  needwood_shore.moos
missions/lake_needwood_v2/: .gitignore  lake-needwood-highres.info  needwood.bhv  needwood.moos  needwood_iM300_test.moos  needwood_laptop.moos  needwood_regular_shared.moos  needwood_robocat.moos  needwood_shore.moos
missions/mit-demo/: demo.bhv  demo.bhv~  demo.moos  demo_iM300_test.moos  demo_laptop.moos  demo_robocat.moos  demo_robocat_iSailBoat.moos  demo_shore.moos
missions/mit_demo_n_scripts/: demo.bhv  launch _shoreside.sh  launch _vehicle.sh  launch_shoreside_example.sh  launch_vehicle_example.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iFrontSeat  plug_pHostInfo.moos  plug_uFldMessageHandler.moos  plug_uSimMarine.moos
missions/mit_demo_w_scripts/: meta_shoreside.moos  plug_pHelmIvP.moos  plug_pMarinePID.moos  plug_pNodeReporter.moos  plug_pShare.moos
missions/mr_plugs_off_noscripts/: psc-parking.info  psc-parking.tif  psc_plugs_off.bhv.bak  psc_plugs_off.moos  psc_plugs_off_laptop.moos  psc_plugs_off_robocat.moos
missions/psc_plugs_off/: psc_plugs_off.bhv  psc_plugs_off_shore.moos
missions/s1_alpha_ROS/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha_abc_robocat.moos  alpha_shore.moos  readme_robocat.txt
missions/s1_alpha_ROS_test/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha_robocat.moos  alpha_shore.moos
missions/s4_delta_copy_dec2017/: .LastOpenedMOOSLogDirectory  delta.bhv  delta.moos
missions/s4_delta_goby_sim_compatible/: .LastOpenedMOOSLogDirectory  delta_shore.moos  delta_shore_non_ubiquity.moos  delta_shore_non_ubiquity.moos++
missions/sailbot_alpha/: launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iSailBoat.moos  plug_pHelmIvP.moos  plug_pHostInfo.moos  plug_pNodeReporter.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos  targ_evan.bhv  targ_evan.moos  targ_shoreside.moos
missions/xrelay/: .LastOpenedMOOSLogDirectory  xrelay-modified.moos  xrelay_apples.moos  xrelay_pears.moos
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/factorialtest/: factorial.cpp  factorial.hpp
src/iEcoCat/: CMakeLists.txt  M300.cpp  M300.h  M300_Info.cpp  M300_Info.h  Thruster.cpp  Thruster.h  iM300.moos  main.cpp
src/iSailBoat/: CMakeLists.txt  SailBoat.cpp  SailBoat.h  SailBoat_Info.cpp  SailBoat_Info.h  iSailBoat.moos  main.cpp
src/lib_behaviors-test/: Makefile  cmake_install.cmake
src/lib_sock_utils/: CMakeLists.txt  SockNinja.cpp
src/pExampleApp/: Makefile  cmake_install.cmake
src/pXRelayTest/: Makefile  cmake_install.cmake
unit_testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
unit_testing/factorialTest/: factorial-test.cpp
(+235 files in other folders)
